--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
   <meta charset="utf-8">
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 <body>
 
 <div ng-app="myApp" ng-controller="customersCtrl">
