--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <canvas id="canvas" width="1024" height="512" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
-    <div id="map" style="height: 100%"></div>
+    <div id="map" style="width:100%; height:100%;"></div>
     <script>
 
       function initMap() {
