--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
   <script src="data.js"></script>
 
-<!--
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.1.0/milligram.min.css">
--->
 
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -40,16 +38,11 @@
   </tr>
 </table>
 
-<!--
 <div ng-if="isChart == true" id="chart_div" style="width: 900px; height: 300px;"></div>
 
 
 <canvas id="canvas" width="1024" height="512" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
--->
-
-
-
 
 </div>
 
@@ -127,7 +120,13 @@ app.controller('customersCtrl', function($scope, $http) {
   })
 
 
+  var c = document.getElementById("canvas");
+  var ctx = c.getContext("2d");
+  ctx.font = "30px Roboto";
 
+  $.each(canvas_data, function(i){
+    ctx.fillText(canvas_data[i][0],canvas_data[i][1],canvas_data[i][2]);
+  })
 
 });
 
