--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ Your browser does not support the HTML5 canvas tag.</canvas>
       function initMap() {
         var myLatLng = {lat: -25.363, lng: 131.044};
 
-        var map = new google.maps.Map(document.getElementById('#map'), {
+        var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
           center: myLatLng
         });
