--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ function getQueryParams(qs) {
 
 data = getQueryParams(document.location.search).data;
 
+console.log(data)
+
 var app = angular.module('myApp', []);
 
 bar_data = [];
