--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <canvas ng-if="isCanvas == true" id="canvas" width="1024" height="512" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>
 
-<div ng-if="isCanvas == true" id="map" style="width:100%; height:100%;"></div>
+<div ng-if="isMap == true" id="map" style="width:100%; height:100%;"></div>
 
 </div>
 
