--- a/index.html
+++ b/index.html
@@ -21,9 +21,14 @@
   </style>
 <body>
 
+<form action="https://turupawn.github.io/Jsonification/index.html" method="GET">
+  <textarea name="data" id="textarea" cols="45" rows="5">[{"a":10},{"a":20},{"a":30}]</textarea>
+  <input type="submit" /> 
+</form>
+
 <div id="main" ng-app="myApp" ng-controller="customersCtrl">
 
-<table ng-if="isSequential == true">
+<table ng-if="isSequentialTable == true">
   <tr>
     <th ng-repeat="key in keys">{{ key }}</th>
   </tr>
@@ -32,7 +37,7 @@
   </tr>
 </table>
 
-<table ng-if="isSequential == false">
+<table ng-if="isNonSequentialTable == true">
   <tr ng-repeat="(key_row,data_row) in data">
     <td ng-repeat="(key_column,data_column) in data_row">{{ key_column }}: {{ data_column }}</td>
   </tr>
@@ -66,8 +71,15 @@ function getQueryParams(qs) {
 
 //console.log(getQueryParams(document.location.search).data)
 
-//data = JSON.parse(getQueryParams(document.location.search).data);
+data_param = getQueryParams(document.location.search).data;
 
+data = []
+
+if(data_param)
+{
+  data = JSON.parse('{"data":'+data_param+'}').data
+  $("#textarea").val(data_param);
+}
 
 var app = angular.module('myApp', []);
 
@@ -77,7 +89,8 @@ map_data = [];
 
 app.controller('customersCtrl', function($scope, $http) {
 
-  $scope.isSequential=true;
+  $scope.isSequentialTable=true;
+  $scope.isNonSequential=false;
   $scope.isChart=true;
   $scope.isCanvas=true;
   $scope.isMap=true;
@@ -98,9 +111,16 @@ app.controller('customersCtrl', function($scope, $http) {
     });
     if(JSON.stringify($scope.keys) != JSON.stringify(current_keys))
     {
-      $scope.isSequential=false;
+      $scope.isSequentialTable=false;
+      $scope.isNonSequentialTable=true;
     }
   });
+
+  if(data.length==0)
+  {
+    $scope.isSequentialTable=false;
+    $scope.isNonSequentialTable=true;
+  }
 
   //isChart
   bar_data = [ ['TODO1', 'TODO2', { role: 'style' }] ];
