--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
 
 <div ng-if="isChart == true" id="chart_div" style="width: 900px; height: 300px;"></div>
 
-
-<canvas ng-if="isCanvas == true" id="canvas" width="1024" height="512" style="border:1px solid #d3d3d3;">
-Your browser does not support the HTML5 canvas tag.</canvas>
-
 <div ng-if="isMap == true" id="map" style="width:100%; height:100%;"></div>
 
 </div>
+
+<canvas ng-if="isCanvas == true" id="canvas" width="1024" height="512" style="border:1px solid #d3d3d3;">
+Your browser does not support the HTML5 canvas tag.</canvas>
 
 <script>
 
@@ -73,11 +72,11 @@ function getQueryParams(qs) {
 
 data_param = getQueryParams(document.location.search).data;
 
-//data = []
+data = []//!!!
 
 if(data_param)
 {
-  //data = JSON.parse('{"data":'+data_param+'}').data
+  data = JSON.parse('{"data":'+data_param+'}').data//!!!
   $("#textarea").val(data_param);
 }
 
