--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <script src="http://rosalilastudio.com/js/arbor.js"></script>  
+  <script src="arbor.js"></script>  
   <script src="arbor_setup.js"></script>
 
   <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
